@@ -475,7 +475,7 @@ int DpsDocProcessResponseHeaders(DPS_AGENT *Indexer, DPS_DOCUMENT *Doc) {  /* Th
 		Href.url = url;
 		DpsHrefListAdd(Indexer, &Indexer->Hrefs, &Href);
 /*		DpsAppendTarget(Indexer,  url, "", hops, parent);*/
-		if (!Doc->subdoc) {
+		if (Doc->subdoc < Indexer->Flags.SubDocLevel) {
 		  tok = dps_strtok_r((char*)VaryLang, " ,\t", &lt);
 		  while (tok != NULL) {
 /*		    DpsAppendTarget(Indexer, ourl, tok, hops, parent );*/
@@ -544,7 +544,9 @@ int DpsDocProcessResponseHeaders(DPS_AGENT *Indexer, DPS_DOCUMENT *Doc) {  /* Th
 	}
 
 	if ((var = DpsVarListFind(&Doc->Sections, "Location"))) {
-	  if ((Doc->subdoc == 0) && ((status == DPS_HTTP_STATUS_MOVED_TEMPORARILY) || (status == DPS_HTTP_STATUS_SEE_OTHER) 
+	  if ((Doc->subdoc < Indexer->Flags.SubDocLevel) && 
+	      ((status == DPS_HTTP_STATUS_MOVED_TEMPORARILY) 
+	       || (status == DPS_HTTP_STATUS_SEE_OTHER) 
 	       || (status == DPS_HTTP_STATUS_TEMPORARY_REDIRECT) )) {
 	    DpsIndexSubDoc(Indexer, Doc, NULL, NULL, var->val);
 	  } else {
